--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"/Users/Admin/Documents/JavaT/java/Certificacion","type":"PROJECT","hints":{"PROJECT_NAME":"Certificacion"}},"ABSENT"]]
